# AegisXAI-Enterprise-Risk-Command-Engine

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.streamlit/: config.toml
aegisxai/: .env.example  .gitignore  Dockerfile  LICENSE  README.md  __init__.py  app.py  architecture.md  deployment_guide.md  docker-compose.yml  healthcheck.py  requirements.txt
aegisxai/auth/: auth.py
aegisxai/config/: settings.py
aegisxai/cx/: engagement.py  recommendations.py  satisfaction.py  sentiment.py  service_quality.py  voc.py
aegisxai/dashboards/: ai_pages.py  biz_pages.py  components.py  corp_pages.py  cx_pages.py  enterprise_pages.py  ops_pages.py  pages.py  premium_dashboards.py  ux_pages.py
aegisxai/models/: features.py  registry.py  train.py
aegisxai/services/: advanced_features.py  alert_service.py  anomaly_service.py  clv_service.py  compliance_service.py  copilot_service.py  forecasting_service.py  integration_service.py  pipeline_service.py  prediction_service.py  premium_services.py  premium_ux.py  recommendation_service.py  retention_agent.py  xai_service.py
aegisxai/tests/: conftest.py  test_auth.py  test_auth_extended.py  test_dashboard.py  test_model.py  test_prediction.py  test_premium_dashboards.py  test_registry.py  (+3 more)
scripts/: batch_predict.py  setup.ps1  setup.sh  train_model.py
(+7 files in other folders)
