[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "aegisxai"
version = "4.0.0"
description = "Enterprise Churn Prediction & Risk Mitigation Platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AegisXAI Contributors"},
]
keywords = ["machine-learning", "churn-prediction", "xai", "streamlit", "enterprise"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.50.0",
    "xgboost>=3.0.0",
    "lightgbm>=4.6.0",
    "shap>=0.47.2",
    "plotly>=6.8.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.4.2",
    "python-dotenv>=1.0.1",
]

[project.urls]
Homepage = "https://github.com/luccy93/AegisXAI-Enterprise-Risk-Command-Engine"
Repository = "https://github.com/luccy93/AegisXAI-Enterprise-Risk-Command-Engine"
Issues = "https://github.com/luccy93/AegisXAI-Enterprise-Risk-Command-Engine/issues"

[tool.setuptools.packages.find]
include = ["aegisxai*"]

[tool.pytest.ini_options]
testpaths = ["aegisxai/tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
